[MM-55336] Fixed teamname alignment in channel switcher (#25429)

--- a/webapp/channels/src/sass/components/_suggestion-list.scss
+++ b/webapp/channels/src/sass/components/_suggestion-list.scss
@@ -342,6 +342,7 @@
         right: 20px;
         overflow: hidden;
         max-width: 20%;
+        text-align: right;
         text-overflow: ellipsis;
         white-space: nowrap;
     }
